cluster/apps/platform/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://headlamp-adm.${CLUSTER_DOMAIN}"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/weight: "20"
    gethomepage.dev/name: Headlamp
    gethomepage.dev/icon: headlamp.png
    gethomepage.dev/description: Kubernetes dashboard
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: kube-system
  hostnames:
    - "headlamp-adm.${CLUSTER_DOMAIN}"
  rules:
    - filters:
        - type: ExternalAuth
          externalAuth:
            backendRef:
              group: ""
              kind: Service
              name: authelia
              namespace: authelia
              port: 80
            protocol: HTTP
            http:
              path: /api/authz/ext-authz/
              allowedHeaders:
                - cookie
                - authorization
                - x-forwarded-proto
                - x-forwarded-host
                - x-forwarded-uri
                - x-forwarded-for
                - accept
              allowedResponseHeaders:
                - remote-user
                - remote-groups
                - remote-name
                - remote-email
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
